2/20/12 beam segment in solution
2/20/12 fix divide-by-zero error for pure water
2/20/12 beam segment between light and cuvette
2/20/12 add lambdaMax to solution model
2/20/12 delete wavelength feature (too expensive to hide and continue to support)
2/20/12 concentration slider
# 0.00.10 (61504) Feb 20, 2012
2/20/12 first dev version of "Concentration" flavor
2/20/12 add translucent background to label on dropper, so that labels are visible on all solution colors
2/20/12 first pass at concentration text field
2/17/12 make distance between light and cuvette something that's easy to measure (1.5cm)
2/17/12 add "Concentration" flavor to this project
2/16/12 use white text on detector
2/16/12 change Kool-Aid to "Drink mix"
2/16/12 add unlabeled major ticks to ruler at 1/2 cm increments
2/14/12 delete attempt at using HSliderNode node for concentration slider
2/14/12 add concentration slider, not wired up yet
2/14/12 add ruler to model, to take advantage of resetting its location on Reset All
2/14/12 flesh out concentration control a bit more
2/14/12 change units on concentration control to match appropriate units for specific solution
2/14/12 hide concentration control for pure water
2/14/12 base class for solutions
2/14/12 add stroke around color chips in combo boxes, sames as for fluids
2/14/12 add pure water to the list of solutions (even though it's not technically a solution)
2/14/12 use different solution models for the 2 tabs, needs are very different
2/11/12 add wire to AT detector, standardize wire colors
2/11/12 preliminary pass at AT detector
2/11/12 debug node that display model and view locations
2/9/12 make center of concentration probe transparent, so you can see the fluid that the crosshairs are on [61163]
2/9/12 fix: concentration meter continues to read a value after dropper is turned off
# 0.00.09 (61151) Feb 9, 2012
2/9/12 change request: make concentration meter cable curvy (ala Bending Light)