@@ -1,3 +1,4 @@
+2/20/12 beam segment to right of cuvette
 2/20/12 beam segment in solution
 2/20/12 fix divide-by-zero error for pure water
 2/20/12 beam segment between light and cuvette
